Pdf preview, dynamically add dbinfo json if
not running in compose. Removed required fields from dto's, although they are important nSwag refused to allow null in response.
