# JobHuntAPI/Model/Dto/PdfRequestDto.cs
@@ -1,0 +1,8 @@
+﻿namespace JobHuntAPI.Model.Dto
+{
+	public class PdfRequestDto
+	{
+		public Guid UserId { get; set;  }
+		public Guid PdfId { get; set; }
+	}
+}
